[durgasankar].add -> dash board overflow error fixed and display all remainder notes working fine

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,7 @@ body {
   padding: 0px;
   overflow: hidden;
 }
+// assigning padding to note container
+.mat-drawer-container {
+  padding-bottom: 50px;
+}
